--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "redux": "^4.0.0",
+    "request": "^2.87.0",
     "validator": "^9.4.1"
   },
   "devDependencies": {
