--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mongoose": "^5.0.12",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "request": "^2.87.0",
     "validator": "^9.4.1"
   },
