--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-google-maps": "^9.4.5",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "recompose": "^0.27.1"
   },
