--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "recompose": "^0.27.1"
+    "react-slick": "^0.23.1",
+    "recompose": "^0.27.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
